--- a/createAccount.html
+++ b/createAccount.html
@@ -71,17 +71,27 @@
     <!-- /Header -->
 
     <!-- /LOGIN -->
-    <div class="loginbox">
+    <div class="createaccount">
         <img src="avatar.png" class="avatar">
-        <h2 style="color:#dd0a37">LOGIN</h2>
+        <h2 style="color:#dd0a37">SIGN UP</h2>
         <form>
+            <p>FIRST NAME</p>
+            <input type="text" name="" placeholder="FIRST NAME">
+            <p>LAST NAME</p>
+            <input type="text" name="" placeholder="LAST NAME">
             <p>USERNAME</p>
             <input type="text" name="" placeholder="Username">
             <p>PASSWORD</p>
             <input type="password" name="" placeholder="password">
-            <input type="submit" name="" value="Login" class="button">
-            <a href="#">Forgot Password</a><br>
-            <a href="createAccount.html">Create Account</a><br>
+            <p>RE-ENTER PASSWORD</p>
+            <input type="password" name="" placeholder="password">
+            <p>EMAIL-ID</p>
+            <input type="email" name="" placeholder="abc@email.com">
+            <p>CONTACT</p>
+            <input type="text" name="" >
+            <input type="submit" name="" value="SUBMIT" class="button">
+            
+            
         </form>
 
     </div>
