--- a/adminLogin.html
+++ b/adminLogin.html
@@ -70,17 +70,17 @@
     </header>
     <!-- /Header -->
 
-    <!-- /LOGIN -->
+    <!-- /ADMIN LOGIN -->
     <div class="loginbox">
         <img src="avatar.png" class="avatar">
         <h2 style="color:#dd0a37">ADMIN LOGIN</h2>
-        <form>
+        <form action="adminlobby.html">
             <p>USERNAME</p>
-            <input type="text" name="adminUsername" placeholder="Username" required>
+            <input type="text" name="adminUsername" placeholder="Username">
             <p>PASSWORD</p>
             <input type="password" name="adminPassword" placeholder="password">
-            <input type="submit" name="" value="Login" class="button">
-            <a href="#">Forgot Password</a><br>
+            <input type="submit" name="" value="LOGIN" class="button">
+            
             
         </form>
 
@@ -113,8 +113,6 @@
     <script src="js/jquery.waypoints.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/jquery.stellar.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
-    <script src="js/google-map.js"></script>
     <script src="js/jquery.countTo.js"></script>
     <script src="js/main.js"></script>
 
