--- a/createAccount.html
+++ b/createAccount.html
@@ -76,19 +76,19 @@
         <h2 style="color:#dd0a37">SIGN UP</h2>
         <form>
             <p>FIRST NAME</p>
-            <input type="text" name="" placeholder="FIRST NAME">
+            <input type="text" name="" placeholder="FIRST NAME" required>
             <p>LAST NAME</p>
-            <input type="text" name="" placeholder="LAST NAME">
+            <input type="text" name="" placeholder="LAST NAME" required>
             <p>USERNAME</p>
-            <input type="text" name="" placeholder="Username">
+            <input type="text" name="" placeholder="Username" required>
             <p>PASSWORD</p>
             <input type="password" name="" placeholder="password">
             <p>RE-ENTER PASSWORD</p>
             <input type="password" name="" placeholder="password">
             <p>EMAIL-ID</p>
-            <input type="email" name="" placeholder="abc@email.com">
+            <input type="email" name="" placeholder="abc@email.com" required>
             <p>CONTACT</p>
-            <input type="text" name="" >
+            <input type="text" name="" required>
             <input type="submit" name="" value="SUBMIT" class="button">
             
             
