--- a/createEvent.html
+++ b/createEvent.html
@@ -70,17 +70,17 @@
     </header>
     <!-- /Header -->
 
-    <!-- /LOGIN -->
-    <div class="createEvent">
+    <!-- /CREATE EVENT -->
+    <div class="createEventBox">
         <img src="avatar.png" class="avatar">
         <h2 style="color:#dd0a37">CREATE EVENT</h2>
         <form>
             <p>NAME</p>
             <input type="text" name="" placeholder="NAME" required>
             <p>TIME</p>
-            <input type="text" name="" placeholder="LAST NAME" required>
+            <input type="text" name="" placeholder="00:00:00" required>
             <p>VENUE</p>
-            <input type="text" name="" placeholder="Username" required>
+            <input type="text" name="" placeholder="Venue" required>
             <p>SEATS</p>
             <input type="text" name="" required>
             <input type="submit" name="" value="ADD EVENT" class="button">
