--- a/paymentLobby.html
+++ b/paymentLobby.html
@@ -37,7 +37,7 @@
     <!-- Header -->
     
 
-    <!-- /LOGIN -->
+    <!-- /PAYMENT LOBBY -->
     <div class="paymentbox">
         <img src="avatar.png" class="avatar">
         <h2 style="color:#dd0a37">PAYMENT LOBBY</h2>
