yada yada-yo Create Event

--- a/createEvent.html
+++ b/createEvent.html
@@ -71,16 +71,18 @@
     <!-- /Header -->
 
     <!-- /LOGIN -->
-    <div class="createEvent">
+    <div class="createaccount">
         <img src="avatar.png" class="avatar">
         <h2 style="color:#dd0a37">CREATE EVENT</h2>
-        <form>
+         <form>
             <p>NAME</p>
-            <input type="text" name="" placeholder="NAME" required>
+            <input type="text" name="" placeholder="Concert/Movie/yada-yada-yo" required>
+            <p>DATE</p>
+            <input type="text" name="" placeholder="09/11/2001" required>
             <p>TIME</p>
-            <input type="text" name="" placeholder="LAST NAME" required>
+            <input type="text" name="" placeholder="00:00" required>
             <p>VENUE</p>
-            <input type="text" name="" placeholder="Username" required>
+            <input type="text" name="" placeholder="VENUE" required>
             <p>SEATS</p>
             <input type="text" name="" required>
             <input type="submit" name="" value="ADD EVENT" class="button">
