--- a/login.html
+++ b/login.html
@@ -74,7 +74,7 @@
     <div class="loginbox">
         <img src="avatar.png" class="avatar">
         <h2 style="color:#dd0a37">LOGIN</h2>
-        <form action="">
+        <form action="eventScreen.html">
             <p>USERNAME</p>
             <input type="text" name="" placeholder="Username" required>
             <p>PASSWORD</p>
@@ -99,17 +99,7 @@
     </div>
 
 
-    <!-- jQuery Plugins -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.waypoints.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/jquery.stellar.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
-    <script src="js/google-map.js"></script>
-    <script src="js/jquery.countTo.js"></script>
-    <script src="js/main.js"></script>
-
+    
 </body>
 
 </html>
