--- a/paymentLobby.html
+++ b/paymentLobby.html
@@ -41,6 +41,13 @@
     <div class="paymentbox">
         <img src="avatar.png" class="avatar">
         <h2 style="color:#dd0a37">PAYMENT LOBBY</h2>
+        <button class="button1" onclick="paymentAlertFunction()">Proceed to Pay</button>
+
+          <script>
+            function paymentAlertFunction() {
+             alert("Thank you for Booking with us");
+            }
+          </script>
         <form action="">
             
         </form>
@@ -59,16 +66,7 @@
     </div>
 
 
-    <!-- jQuery Plugins -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.waypoints.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/jquery.stellar.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
-    <script src="js/google-map.js"></script>
-    <script src="js/jquery.countTo.js"></script>
-    <script src="js/main.js"></script>
+   
 
 </body>
 
